# competitive-intelligence-agent

./: .env.example  .gitignore  README.md  architecture.md  langgraph.json  pyproject.toml
data/: demo_signals.json
src/competitive_intelligence_agent/: __init__.py  api.py  careers_scraper.py  cli.py  db_client.py  demo_data.py  dev_server.py  diff_engine.py  discovery.py  forum_tracker.py  news_scraper.py  ollama_client.py  pipeline.py  schemas.py  vector_store.py
src/competitive_intelligence_agent/nodes/: classification.py  early_warning.py  hypothesis.py  intelligence.py  memory_layer.py  recommendation.py
tests/: test_api_compare.py  test_api_graph.py  test_careers_scraper.py  test_classification.py  test_db_client.py  test_diff_engine.py  test_discovery.py  test_early_warning.py  test_forum_tracker.py  test_graph_interrupts.py  test_hypothesis_rag.py  test_intelligence.py  test_memory_layer.py  test_news_scraper.py  test_ollama_reasoning.py  test_pipeline.py  test_placeholder.py  test_recommendation.py  test_signal_relations.py  test_vector_store.py
web/: app.js  index.html  style.css
