[project]
name = "competitive-intelligence-agent"
version = "0.1.0"
description = "Agentic competitive intelligence early-warning MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "langgraph>=0.2.0",
  "langchain-core>=0.2.0",
  "tenacity>=8.5.0",
  "instructor",
  "chromadb"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio",
  "langgraph-cli[inmem]"
]

[project.scripts]
cia-demo = "competitive_intelligence_agent.cli:main"
cia-serve = "competitive_intelligence_agent.dev_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/competitive_intelligence_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
